@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-18T08:13:41Z",
+  "timestamp" : "2024-05-19T00:58:51Z",
   "count_outdated" : 1110,
   "uniques_outdated" : 645,
-  "count" : 1125,
-  "uniques" : 658,
+  "count" : 1126,
+  "uniques" : 659,
   "clones" : [
     {
       "timestamp": "2024-05-06T00:00:00Z",
@@ -79,12 +79,12 @@
     },
     {
       "timestamp": "2024-05-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
