@@ -1,6 +1,6 @@
 {
-  "count": 15,
-  "uniques": 5,
+  "count": 16,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2024-05-06T00:00:00Z",
@@ -44,8 +44,8 @@
     },
     {
       "timestamp": "2024-05-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
