@@ -1,3 +1,12 @@
+2024-05-19T00:58:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9143881574 # 285
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-19
+* notice: last 14d: unq all: 6 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 645 1110 / 658 1125
+* notice: next accum: outdated-unq outdated-all / unq all: 645 1110 / 659 1126
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2024-05-18]
+
 2024-05-18T08:13:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9138487062 # 283
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-18
